# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2012 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.1758.2.223 2012/02/14 16:51:52 mg Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

3.0.12 ????-??-??
 - 2012-02-14 Fixed bug#7652 - OpenSearch providers are served with wrong mime type.
    Follow-up fix.
 - 2012-02-09 Fixed bug#7109 - no one statistic is working with your selected.
 - 2012-02-09 Fixed bug#8199 - Linked tickets open only in tabs.
 - 2012-02-03 Fixed bug#8180 - bin/otrs.LoaderCache.pl exit code is wrong.
 - 2012-02-02 Fixed bug#7937 - HTMLUtils.pm ignore to much of e-mail source code.
 - 2012-02-02 Fixed bug#7972 - Some mails may not present HTML part when using rich viewing.
 - 2012-01-27 Fixed bug#2820 - Wide character in Syslog message causes Perl crash on utf8 systems.
 - 2012-01-23 Fixed bug#8019 - Ticket customer info widget has scroll bars
 - 2012-01-20 Fixed bug#8128 - Ticket Unwatch may lead to errorscreen.
 - 2012-01-16 Creation of QueueObject was not possible because of missing EncodeObject in CustomerUserGenericTicket.pm
 - 2011-12-20 Fixed bug#8035 - SOAP interface does not allow to create/update
    CustomerCompany records.
 - 2011-12-19 Fixed bug#7005 - JavaScript Init function is executed more than once in TicketZoom
 - 2011-12-14 Fixed bug#7014 - Inline article gets bigger than Ticket::Frontend::HTMLArticleHeightMax.
 - 2011-12-16 Fixed Lithuanian language file encoding.
 - 2011-12-14 Fixed bug#8000 - Queues are translated if are displayed in list-style.
 - 2011-12-13 Fixed bug#7020 - Error in MYSQL Syntax when CustomerID contains special characters.
 - 2011-12-12 Improved #7526 - Automatic TicketSearch for special characters (, ), &, - fails.
 - 2011-12-09 Fixed bug#7997 - Fetching mail via AdminMailAccount does not work.