@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2012 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.1758.2.223 2012/02/14 16:51:52 mg Exp $
+# $Id: CHANGES,v 1.1758.2.224 2012/02/15 22:45:19 cg Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,6 +10,7 @@
 # --
 
 3.0.12 ????-??-??
+ - 2012-02-15 Fixed bug#8144 - Typo and improved logging in GenericAgent.pm.
  - 2012-02-14 Fixed bug#7652 - OpenSearch providers are served with wrong mime type.
     Follow-up fix.
  - 2012-02-09 Fixed bug#7109 - no one statistic is working with your selected.
